# frn-50k-baseline

./: .gitignore  HOW_TO_RUN.md  README.md  frn_cache.py  pyproject.toml  run_demand_forecasting.sh  run_latent_demand_recovery.sh
demand_forecasting/DLinear/data_provider/: data_loader.py
demand_forecasting/DLinear/exp/: exp_main.py
demand_forecasting/DLinear/lib/: revin.py
demand_forecasting/SSA/: ssa_forecasting.py
demand_forecasting/TFT/: predictTFT.py  trainTFT.py
latent_demand_recovery/exp/: app.py
latent_demand_recovery/exp/data/: generate_data.py
