[project]
name = "frn-50k-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "numpy~=1.23.5",
    "pandas~=1.5.3",
    "torch~=2.0.1",
    "datasets~=3.1.0",
    "tensorboard~=2.14.0",
    "h5py~=3.9.0",
    "tsdb~=0.3.1",
    "einops~=0.7.0",
    "sympy~=1.12",
    "pygrinder~=0.4",
    "pytorch-forecasting~=1.0.0",
    "pytorch-lightning~=1.9.4",

]
